recursion.cons.lessons.recursion.cons.Length.scala.error
length:2: error: ';' expected but integer literal found.
  if (l.tail == Nil) {reeturn 0}
                              ^length:6: error: Unmatched closing brace '}' ignored here
 }
 ^